update: flujo hacia blackboard