@@ -16,18 +16,21 @@ class PartidaTest {
     private Partida partida;
     private Jugador jugador1;
     private Jugador jugador2;
-    private Tablero tablero;
 
     @BeforeEach
     void setUp() {
-        jugador1 = new Jugador("Miss wasabe", new Mano(new ArrayList<>()), Arrays.asList("ROJO"), 0, 1);
-        jugador2 = new Jugador("Juanpi", new Mano(new ArrayList<>()), Arrays.asList("AZUL"), 0, 2);
-        tablero = new Tablero(new Descarte(), new Mazo(), new Ruleta());
+        jugador1 = new Jugador("Miss wasabe", new Mano(new ArrayList<>()), List.of("ROJO"), 0, 1);
+        jugador2 = new Jugador("Juanpi", new Mano(new ArrayList<>()), List.of("AZUL"), 0, 2);
+
+        ConfiguracionPartida config = new ConfiguracionPartida();
+        config.setValorMinimo(0);
+        config.setValorMaximo(9);
+        config.setCantidadComodines(8);
+        config.setCantidadCartasAccion(6);
+        config.setTiempoMaximoRuleta(10f);
 
         partida = new Partida();
-        partida.iniciarPartida(Arrays.asList(jugador1, jugador2), tablero);
-
-        tablero.getDescarte().getCartas().add(new Carta("ROJO", 3, TipoCarta.NUMERICA, 3));
+        partida.iniciarPartida(Arrays.asList(jugador1, jugador2), config);
     }
 
     @Test
@@ -39,73 +42,86 @@ class PartidaTest {
     }
 
     @Test
+    void testRepartoInicial() {
+        assertEquals(7, jugador1.getMano().getCartas().size());
+        assertEquals(7, jugador2.getMano().getCartas().size());
+    }
+
+    @Test
+    void testCartaInicialEnDescarte() {
+        assertNotNull(partida.getCartaCima());
+        assertEquals(TipoCarta.NUMERICA, partida.getCartaCima().getTipoCarta());
+    }
+
+    @Test
     void testValidarJugadaCorrecta() {
-        Carta carta = new Carta("ROJO", 5, TipoCarta.NUMERICA, 5);
-        tablero.getDescarte().getCartas().add(new Carta("ROJO", 3, TipoCarta.NUMERICA, 3));
+        Carta cima = partida.getCartaCima();
+        Carta carta = new Carta(cima.getColor(), 5, TipoCarta.NUMERICA, 5);
         assertTrue(partida.validarJugada(carta));
     }
 
     @Test
     void testAplicarJugadaNumeroSpin() {
-        tablero.getDescarte().getCartas().clear();
-        tablero.getDescarte().getCartas().add(new Carta("AZUL", 5, TipoCarta.NUMERICA, 5));
+        partida.getTablero().getDescarte().getCartas().clear();
+        partida.getTablero().getDescarte().getCartas().add(new Carta("AZUL", 5, TipoCarta.NUMERICA, 5));
 
         Carta carta = new Carta("AZUL", 7, TipoCarta.NUMERO_SPIN, 7);
         jugador1.getMano().getCartas().add(carta);
 
         boolean resultado = partida.aplicarJugada(carta);
 
-        assertTrue(resultado, "La jugada Spin debería ser válida");
+        assertTrue(resultado);
         assertEquals(EstadoPartida.GIRO_PENDIENTE, partida.getEstadoPartida());
     }
 
     @Test
     void testAplicarJugadaReversa() {
-        tablero.getDescarte().getCartas().clear();
-        tablero.getDescarte().getCartas().add(new Carta("VERDE", 5, TipoCarta.NUMERICA, 5));
+        partida.getTablero().getDescarte().getCartas().clear();
+        partida.getTablero().getDescarte().getCartas().add(new Carta("VERDE", 5, TipoCarta.NUMERICA, 5));
 
-        Carta carta = new Carta("VERDE", 0, TipoCarta.REVERSA, 20);
+        Carta carta = new Carta("VERDE", null, TipoCarta.REVERSA, 20);
         jugador1.getMano().getCartas().add(carta);
 
         boolean resultado = partida.aplicarJugada(carta);
 
-        assertTrue(resultado, "La jugada Reversa debería ser válida");
-        assertFalse(partida.isSentidoHorario(), "El sentido debe invertirse");
+        assertTrue(resultado);
+        assertFalse(partida.isSentidoHorario());
     }
 
     @Test
     void testAplicarJugadaBloqueo() {
-        tablero.getDescarte().getCartas().clear();
-        tablero.getDescarte().getCartas().add(new Carta("AMARILLO", 2, TipoCarta.NUMERICA, 2));
+        partida.getTablero().getDescarte().getCartas().clear();
+        partida.getTablero().getDescarte().getCartas().add(new Carta("AMARILLO", 2, TipoCarta.NUMERICA, 2));
 
-        Carta carta = new Carta("AMARILLO", 0, TipoCarta.BLOQUEO, 20);
+        Carta carta = new Carta("AMARILLO", null, TipoCarta.BLOQUEO, 20);
         jugador1.getMano().getCartas().add(carta);
 
-        boolean resultado = partida.aplicarJugada(carta);
-
-        assertTrue(resultado, "La jugada Bloqueo debería ser válida");
+        assertTrue(partida.aplicarJugada(carta));
     }
 
     @Test
     void testAplicarJugadaNormal() {
-        Carta carta = new Carta("ROJO", 5, TipoCarta.NUMERICA, 5);
+        Carta cima = partida.getCartaCima();
+        Carta carta = new Carta(cima.getColor(), 5, TipoCarta.NUMERICA, 5);
         jugador1.getMano().getCartas().add(carta);
 
         boolean resultado = partida.aplicarJugada(carta);
 
-        assertTrue(resultado, "La jugada normal debería ser válida");
-        assertEquals(1, partida.getIndiceJugadorActual(), "El turno debe avanzar al siguiente jugador");
+        assertTrue(resultado);
+        assertEquals(1, partida.getIndiceJugadorActual());
     }
 
     @Test
     void testAplicarJugadaInvalida() {
-        Carta carta = new Carta("AZUL", 9, TipoCarta.NUMERICA, 9);
+        Carta cima = partida.getCartaCima();
+        String otroColor = "ROJO".equals(cima.getColor()) ? "AZUL" : "ROJO";
+        Carta carta = new Carta(otroColor, (cima.getNumero() == null ? 9 : (cima.getNumero() + 1) % 10), TipoCarta.NUMERICA, 9);
         jugador1.getMano().getCartas().add(carta);
 
         boolean resultado = partida.aplicarJugada(carta);
 
-        assertFalse(resultado, "La jugada inválida debería devolver false");
-        assertFalse(tablero.getDescarte().getCartas().contains(carta), "La carta no debe estar en el descarte");
+        assertFalse(resultado);
+        assertFalse(partida.getTablero().getDescarte().getCartas().contains(carta));
     }
 
     @Test
@@ -123,12 +139,9 @@ class PartidaTest {
 
     @Test
     void testRobarCartaJugadorActual() {
-        Carta carta = new Carta("AZUL", 9, TipoCarta.NUMERICA, 9);
-        tablero.getMazo().getCartas().add(carta);
-
+        int cartasAntes = jugador1.getMano().getCartas().size();
         partida.robarCartaJugadorActual();
-
-        assertTrue(jugador1.getMano().getCartas().contains(carta));
+        assertEquals(cartasAntes + 1, jugador1.getMano().getCartas().size());
     }
 
     @Test
@@ -138,6 +151,7 @@ class PartidaTest {
 
     @Test
     void testAplicarEfectoRuletaCasiUno() {
+        jugador1.getMano().getCartas().clear();
         jugador1.getMano().getCartas().addAll(Arrays.asList(
                 new Carta("ROJO", 1, TipoCarta.NUMERICA, 1),
                 new Carta("AZUL", 2, TipoCarta.NUMERICA, 2),
@@ -152,15 +166,17 @@ class PartidaTest {
 
     @Test
     void testAplicarEfectoRuletaDescartarPorColor() {
+        jugador1.getMano().getCartas().clear();
         jugador1.getMano().getCartas().addAll(Arrays.asList(
                 new Carta("ROJO", 1, TipoCarta.NUMERICA, 1),
                 new Carta("ROJO", 2, TipoCarta.NUMERICA, 2),
                 new Carta("AZUL", 3, TipoCarta.NUMERICA, 3)
         ));
 
+        int descarteAntes = partida.getTablero().getDescarte().getCartas().size();
         partida.aplicarEfectoRuleta(TipoEventoRuleta.DESCARTAR_POR_COLOR, "ROJO");
 
         assertEquals(1, jugador1.getMano().getCartas().size());
-        assertTrue(tablero.getDescarte().getCartas().size() >= 2);
+        assertTrue(partida.getTablero().getDescarte().getCartas().size() >= descarteAntes + 2);
     }
 }
